# Simulate

./: .gitignore  ErrorStrategy.py  GeoTransformer.py  IntervalFinder.py  PumpController.py  README.md  Segments.py  SpeedPofile.py  SpeedPredictor.py  compensate.py  copmensate.ipynb  dto.py  example.ipynb  find_optimal.py  inTime.py  logRashod.py  log_analyze_tmp.ipynb  logic.py  main.py  mesh_calc.ipynb  metrics.py  norma_search.py  parse_log.py  plots.py  policy.py  pyproject.toml  searchers.py  sim_core.py  simple_example.py  spraying_20250908_080420_485_24a89b48_9ecb_4956_bdb3_4d01f9de0f4a.json  tlog2json.py  use_cases.py  utils.py
