[project]
name = "pj_simulate"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "plt",
    "pyproj>=3.7.2",
    "scikit-learn>=1.7.1",
    "scipy-stubs==1.16.1.1",
    "sympy>=1.14.0",
]
